# sdk_logger

./: .clang-format  .gitignore  README.md
multi_process/: CMakeLists.txt  log_process.cpp  socket_sink.hpp  user_process.cpp
sdk_logger/: CMakeLists.txt  package.xml
sdk_logger/include/sdk_logger/: ros_sink.hpp  sdk_logger.hpp
sdk_logger/src/: sdk_logger.cpp
sdk_logger_user/: CMakeLists.txt  package.xml
sdk_logger_user/src/: user_node.cpp
